# hf-ads7952

./: .gitignore  404.html  README.md  index.html  version_selector.html
.github/workflows/: ci-cpp-analysis.yml  ci-docs-linkcheck.yml  ci-docs-publish.yml  ci-markdown-lint.yml
_config/: .clang-format  .clang-tidy  .markdownlint.json  .yamllint  404.html  Doxyfile  _config.yml  lychee.toml
_config/_includes/: footer_custom.html  head_custom.html
_config/_layouts/: minimal.html  print.html  workflow.html
_config/doxygen-extensions/: README.md
cmake/: hf_ads7952Config.cmake.in  hf_ads7952_build_settings.cmake
development/: CMakeLists.txt  feed.xml  index.html  robots.txt  sitemap.xml  version_info.json
development/api/: ads7952__config_8hpp.js  classads7952_1_1ADS7952.js  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_bfccd401955b95cf8c75461437045ac0.js  doxygen.css  doxygen_crawl.html  functions_func.html  group__ads7952__config.html  group__ads7952__driver.js  group__ads7952__gpio__bits.html  group__ads7952__gpio__bits.js  group__ads7952__transport.html  namespaceADS7952__CFG.html  namespaceads7952.html  namespaceads7952_1_1gpio.html  namespaceads7952_1_1reg_1_1GPIOProg.html  namespacemembers.html  navtreeindex0.js  structads7952_1_1ChannelReadings.js  structads7952_1_1ReadResult-members.html  structads7952_1_1ReadResult.html  topics.html
development/api/search/: all_0.js  all_10.js  all_14.js  all_3.js  all_4.js  all_9.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_1.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_5.js  enumvalues_1.js  enumvalues_6.js  enumvalues_7.js  functions_0.js  functions_8.js  functions_c.js  groups_0.js  groups_6.js  groups_8.js  namespaces_0.js  pages_1.js  pages_2.js  variables_1.js  variables_7.js  variables_a.js
development/assets/js/: just-the-docs.js  search-data.json
development/cmake/: hf_ads7952_build_settings.cmake
development/docs/: index.html
development/docs/api_reference/: index.html
development/docs/cmake_integration/: index.html
development/docs/configuration/: index.html
development/docs/datasheet/: README.md  index.html
development/docs/doxygen/: ads7952_8hpp.html  ads7952_8ipp_source.html  ads7952__config_8hpp.html  ads7952__registers_8hpp.js  ads7952__spi__interface_8hpp.html  ads7952__spi__interface_8hpp_source.html  annotated_dup.js  classads7952_1_1ADS7952.js  classads7952_1_1SpiInterface-members.html  classads7952_1_1SpiInterface.html  classads7952_1_1SpiInterface.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  group__ads7952__channel__masks.js  group__ads7952__config.js  group__ads7952__conversion.html  group__ads7952__core.js  group__ads7952__driver.html  group__ads7952__registers.html  group__ads7952__types.js  index.html  namespaceADS7952__CFG.html  namespaceads7952_1_1gpio.html  namespaceads7952_1_1reg.html  namespaceads7952_1_1reg.js  namespaceads7952_1_1reg_1_1GPIO.html  namespaceads7952_1_1reg_1_1Mode.html  namespacemembers_enum.html  namespaces.html  namespaces_dup.js  navtreedata.js  structads7952_1_1ChannelReadings.html  structads7952_1_1GPIOConfig.js  structads7952_1_1ReadResult.html  topics.js
development/docs/doxygen/search/: all_1.js  all_12.js  all_13.js  all_5.js  all_9.js  all_a.js  all_e.js  classes_2.js  classes_4.js  enums_0.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_3.js  enumvalues_5.js  enumvalues_b.js  functions_1.js  functions_4.js  functions_6.js  functions_7.js  functions_9.js  functions_b.js  groups_2.js  groups_7.js  variables_2.js  variables_6.js  variables_c.js  variables_e.js
development/docs/examples/: index.html
development/docs/hardware_setup/: index.html
development/docs/installation/: index.html
development/docs/platform_integration/: index.html
development/docs/quickstart/: index.html
development/docs/troubleshooting/: index.html
development/doxs/development/: README_8md.html  ads7952_8hpp.js  ads7952_8ipp.html  ads7952_8ipp_source.html  ads7952__registers_8hpp.html  ads7952__registers_8hpp.js  ads7952__registers_8hpp_source.html  ads7952__spi__interface_8hpp.html  ads7952__spi__interface_8hpp_source.html  ads7952__types_8hpp.html  ads7952__types_8hpp.js  ads7952__types_8hpp_source.html  classads7952_1_1ADS7952-members.html  classads7952_1_1ADS7952.html  functions_func.html  group__ads7952__channel__masks.html  group__ads7952__transport.js  group__ads7952__types.html  index.html  menudata.js  namespaceads7952.html  namespaceads7952.js  namespaceads7952_1_1reg_1_1Alarm.html  namespaceads7952_1_1reg_1_1GPIO.html  namespaceads7952_1_1reg_1_1Response.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  navtreedata.js  navtreeindex0.js  structads7952_1_1ChannelReadings.html  structads7952_1_1GPIOConfig-members.html
development/doxs/development/search/: all_0.js  all_1.js  all_11.js  all_1a.js  all_2.js  all_3.js  all_7.js  all_8.js  all_b.js  all_e.js  defines_0.js  enums_1.js  enums_4.js  enums_5.js  enumvalues_3.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  enumvalues_b.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_a.js  groups_9.js  groups_a.js  searchdata.js  variables_0.js  variables_5.js  variables_8.js  variables_9.js  variables_d.js
development/examples/esp32/: CMakeLists.txt  README.md  app_config.yml  index.html  sdkconfig
development/examples/esp32/components/hf_ads7952/: CMakeLists.txt  idf_component.yml
development/examples/esp32/main/: CMakeLists.txt  TestFramework.h  alarm_gpio_example.cpp  driver_integration_test.cpp  multi_mode_example.cpp
docs/: api_reference.md  cmake_integration.md  configuration.md  examples.md  hardware_setup.md  index.md  installation.md  platform_integration.md  quickstart.md  troubleshooting.md
examples/esp32/: sdkconfig
inc/: ads7952.hpp  ads7952_config.hpp  ads7952_registers.hpp  ads7952_spi_interface.hpp  ads7952_types.hpp  ads7952_version.h.in
src/: ads7952.ipp
(+72 files in other folders)
